# sgba

./: .gitignore  Cargo.toml  README.md
db/: cr_db.sql  exe_cr_db.sh  exe_migr.sh  exe_pop.sh  rc.sh
db/migration/: migr_0.1.0.sql
db/populating/: test_data.sql
doc_api/: sgba_openapi.yaml
src/: main.rs  sgba.rs
src/sgba/: api.rs  cfg.rs  db.rs
src/sgba/api/auth/: auth.rs  jwt.rs
src/sgba/api/data/: users.rs
src/sgba/api/data/users/: controller.rs  crypt.rs  dto.rs
src/sgba/db/: con.rs  users.rs
src/sgba/db/users/: query.rs  user.rs
src/test/: api.rs
