[package]
name = "sgba"
version = "0.1.0"
author = ["Grzesiek grzesiek.bylica@gmail.com"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Initial project (API, postgresql, migration, JWT, configuration) using axum 0.6"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
tokio = { version = "1.26.0", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", feature = ["env-filter"] }
clap = { version = "4.1.8", features = ["derive"] }
# uuid = "1.3.0"
time = "0.3.20"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.94"
rust-argon2 = "1.0"
validator = { version = "0.15", features = ["derive"]}
